compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__action__splitting_string_as_first_pipeline_step_inserts_brackets.snap
---
source: compiler-core/src/language_server/tests/action.rs
expression: "pub fn main() {\n  \"wibble  wobble\" |> io.println\n}"
---
----- BEFORE ACTION
pub fn main() {
  "wibble  wobble" |> io.println
          ↑                     
}


----- AFTER ACTION
pub fn main() {
  { "wibble " <> todo <> " wobble" } |> io.println
}
